package com.skhatoll.backend.service.impl.sala;



import com.skhatoll.backend.dto.sala.*;
import com.skhatoll.backend.entities.*;
import com.skhatoll.backend.repository.*;
import com.skhatoll.backend.service.interfaces.jugador.IJugadorService;
import com.skhatoll.backend.service.interfaces.sala.ISalaService;
import com.skhatoll.backend.util.constants.ErrorMessages;
import com.skhatoll.backend.util.constants.GameConstants;
import jakarta.transaction.Transactional;
import lombok.RequiredArgsConstructor;
import org.springframework.security.core.context.SecurityContextHolder;
import org.springframework.stereotype.Service;

import java.util.ArrayList;
import java.util.Collections;
import java.util.List;
import java.util.Random;
import java.util.stream.Collectors;

import static com.skhatoll.backend.util.constants.ErrorMessages.*;
import static com.skhatoll.backend.util.constants.GameConstants.*;

@Service
@RequiredArgsConstructor
public class SalaService implements ISalaService {

    private final SalaRepository salaRepository;
    private final SalaUsuarioRepository salaUsuarioRepository;
    private final UsuarioRepository usuarioRepository;
    private final RolRepository rolRepository;
    private final SalaSocketService salaSocketService;
    private final IJugadorService jugadorService;
    private final HabilidadSalaRepository habilidadSalaRepository;

    // -------------------------------------------------------
    // Obtener el usuario autenticado desde el contexto de Security
    // -------------------------------------------------------
    private Usuario getUsuarioAutenticado() {
        String nombre = SecurityContextHolder.getContext().getAuthentication().getName();
        return usuarioRepository.findByNombre(nombre)
                .orElseThrow(() -> new IllegalArgumentException("Usuario no encontrado"));
    }

    // -------------------------------------------------------
    // Crear sala
    // -------------------------------------------------------
    @Transactional
    public CrearSalaResponse crearSala() {
        Usuario creador = getUsuarioAutenticado();

        String codigo = generarCodigoUnico();

        Sala sala = Sala.builder()
                .narrador(creador)
                .creador(creador)
                .codigoSala(codigo)
                .build();

        salaRepository.save(sala);

        SalaUsuario salaUsuario = SalaUsuario.builder()
                .sala(sala)
                .usuario(creador)
                .build();

        salaUsuarioRepository.save(salaUsuario);

        return new CrearSalaResponse(codigo);
    }

    // -------------------------------------------------------
    // Unirse a una sala
    // -------------------------------------------------------
    @Transactional
    public void unirse(UnirseRequest request) {
        Usuario usuario = getUsuarioAutenticado();

        Sala sala = salaRepository.findByCodigoSala(request.codigoSala())
                .orElseThrow(() -> new IllegalArgumentException(SALA_NO_ENCONTRADA));

        if (sala.getEstadoSala() != Sala.EstadoSala.CREADA) {
            throw new IllegalStateException("La sala no está disponible para unirse");
        }

        int jugadoresActuales = salaUsuarioRepository.countBySala_IdSala(sala.getIdSala());
        if (jugadoresActuales >= sala.getMaxJugadores()) {
            throw new IllegalStateException("La sala está llena");
        }

        boolean yaEsta = salaUsuarioRepository.existsBySala_IdSalaAndUsuario_IdUsuario(
                sala.getIdSala(), usuario.getIdUsuario());
        if (yaEsta) {
            throw new IllegalStateException("Ya estás en esta sala");
        }

        SalaUsuario salaUsuario = SalaUsuario.builder()
                .sala(sala)
                .usuario(usuario)
                .build();

        salaUsuarioRepository.save(salaUsuario);

        // Notificar a todos en el lobby que hay un nuevo jugador
        List<JugadorDto> jugadoresActualizados = jugadorService.getJugadores(request.codigoSala());
        salaSocketService.notificarNuevoJugador(request.codigoSala(), jugadoresActualizados);
    }

    // -------------------------------------------------------
    // Asignar narrador
    // -------------------------------------------------------
    @Transactional
    public void asignarNarrador(String codigoSala, AsignarNarradorRequest request) {
        Usuario solicitante = getUsuarioAutenticado();

        Sala sala = salaRepository.findByCodigoSala(codigoSala)
                .orElseThrow(() -> new IllegalArgumentException(SALA_NO_ENCONTRADA));

        if (!sala.getCreador().getIdUsuario().equals(solicitante.getIdUsuario())) {
            throw new IllegalStateException("Solo el creador puede asignar el narrador");
        }

        boolean estaEnSala = salaUsuarioRepository.existsBySala_IdSalaAndUsuario_IdUsuario(
                sala.getIdSala(), request.getIdUsuario());
        if (!estaEnSala) {
            throw new IllegalArgumentException("El usuario no está en la sala");
        }

        Usuario nuevoNarrador = usuarioRepository.findById(request.getIdUsuario())
                .orElseThrow(() -> new IllegalArgumentException(USUARIO_NO_ENCONTRADO));

        sala.setNarrador(nuevoNarrador);
        salaRepository.save(sala);

        List<JugadorDto> jugadoresActualizados = jugadorService.getJugadores(codigoSala);
        salaSocketService.notificarNarradorAsignado(codigoSala, jugadoresActualizados);
    }

    // -------------------------------------------------------
    // Iniciar partida: asigna roles y notifica por WebSocket
    // -------------------------------------------------------
    @Transactional
    public void iniciarPartida(String codigoSala) {
        Usuario solicitante = getUsuarioAutenticado();

        Sala sala = salaRepository.findByCodigoSala(codigoSala)
                .orElseThrow(() -> new IllegalArgumentException(SALA_NO_ENCONTRADA));

        if (!sala.getCreador().getIdUsuario().equals(solicitante.getIdUsuario())) {
            throw new IllegalStateException("Solo el creador puede iniciar la partida");
        }

        List<SalaUsuario> jugadores = salaUsuarioRepository.findBySala_IdSala(sala.getIdSala());

        // El narrador NO recibe rol (está fuera del juego)
        List<SalaUsuario> jugadoresConRol = jugadores.stream()
                .filter(su -> !su.getUsuario().getIdUsuario()
                        .equals(sala.getNarrador().getIdUsuario()))
                .toList();

        int totalJugadores = jugadoresConRol.size();

        if (totalJugadores < sala.getMinJugadores()) {
            throw new IllegalStateException(
                    "Se necesitan al menos " + sala.getMinJugadores() + " jugadores para iniciar");
        }

        int numLobos = Math.max(1, totalJugadores / 4);

        Rol rolLobo = rolRepository.findByNombre(ROL_LOBO)
                .orElseThrow(() -> new IllegalStateException("Rol Lobo no encontrado en BD"));

        List<Rol> rolesAldea = rolRepository.findByBando(Rol.Bando.aldea);

        Rol rolAldeano = rolRepository.findByNombre(ROL_ALDEANO)
                .orElseThrow(() -> new IllegalStateException("Rol Aldeano no encontrado en BD"));

        rolesAldea = rolesAldea.stream()
                .filter(rol -> !rol.getNombre().equals(ROL_ALDEANO))
                .collect(Collectors.toList());

        Collections.shuffle(rolesAldea);

        int numRolesAldea = totalJugadores - numLobos;

        List<Rol> rolesARepartir = new ArrayList<>();

        // Añadir roles de aldea
        for (int i = 0; i < numRolesAldea && i < rolesAldea.size(); i++) {
            rolesARepartir.add(rolesAldea.get(i));
        }
        // Rellenar con aldeanos si faltan
        while (rolesARepartir.size() < numRolesAldea) {
            rolesARepartir.add(rolAldeano);
        }
        // Añadir lobos
        for (int i = 0; i < numLobos; i++) {
            rolesARepartir.add(rolLobo);
        }

        Collections.shuffle(rolesARepartir);

        for (int i = 0; i < totalJugadores; i++) {
            SalaUsuario su = jugadoresConRol.get(i);
            Rol rol = rolesARepartir.get(i);

            su.setRol(rol);
            salaUsuarioRepository.save(su);

            asignarHabilidades(su, rol);

            salaSocketService.enviarRolPrivado(
                    su.getUsuario().getNombre(),
                    new SalaSocketService.RolAsignadoEvent(
                            WS_EVENTO_ROL_ASIGNADO,
                            rol.getIdRol(),
                            rol.getNombre(),
                            rol.getDescripcion(),
                            rol.getBando().name()));
        }

        sala.setEstadoSala(Sala.EstadoSala.INICIADA);
        salaRepository.save(sala);

        salaSocketService.notificarInicio(codigoSala);
    }

    // -------------------------------------------------------
    // Generar código de sala único de 6 caracteres
    // -------------------------------------------------------
    private String generarCodigoUnico() {
        String caracteres = "ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789";
        Random random = new Random();
        String codigo;

        do {
            StringBuilder sb = new StringBuilder(6);
            for (int i = 0; i < 6; i++) {
                sb.append(caracteres.charAt(random.nextInt(caracteres.length())));
            }
            codigo = sb.toString();
        } while (salaRepository.existsByCodigoSala(codigo));

        return codigo;
    }

    public List<JugadorRolDto> getJugadoresConRol(String codigoSala) {
        Usuario solicitante = getUsuarioAutenticado();

        Sala sala = salaRepository.findByCodigoSala(codigoSala)
                .orElseThrow(() -> new IllegalArgumentException(SALA_NO_ENCONTRADA));

        if (sala.getNarrador() == null) {
            throw new IllegalStateException("La sala no tiene narrador asignado");
        }

        boolean esCreador = sala.getCreador().getIdUsuario().equals(solicitante.getIdUsuario());
        boolean esNarrador = sala.getNarrador().getIdUsuario().equals(solicitante.getIdUsuario());
        
        SalaUsuario solicitanteSalaUsuario = salaUsuarioRepository
                .findBySala_IdSalaAndUsuario_IdUsuario(sala.getIdSala(), solicitante.getIdUsuario())
                .orElse(null);
        boolean estaMuertoConfirmado = solicitanteSalaUsuario != null && 
                Boolean.TRUE.equals(solicitanteSalaUsuario.getMuerteConfirmada());
        
        if (!esCreador && !esNarrador && !estaMuertoConfirmado) {
            throw new IllegalStateException("Solo el creador, el narrador o los jugadores muertos confirmados pueden ver los roles");
        }

        Integer idNarrador = sala.getNarrador().getIdUsuario();

        return salaUsuarioRepository.findBySala_IdSala(sala.getIdSala())
                .stream()
                .filter(su -> !su.getUsuario().getIdUsuario().equals(idNarrador))
                .map(su -> {
                    boolean esMentor = !salaUsuarioRepository.findBySala_IdSalaAndMentor_IdUsuario(sala.getIdSala(), su.getUsuario().getIdUsuario()).isEmpty();
                    return new JugadorRolDto(
                            su.getUsuario().getIdUsuario(),
                            su.getUsuario().getNombre(),
                            su.getUsuario().getCodigoUuid(),
                            su.getEstaVivo(),
                            su.getRol() != null ? su.getRol().getNombre() : null,
                            su.getRol() != null ? su.getRol().getBando().name() : null,
                            false,
                            esMentor);
                })
                .toList();
    }

    public MiRolDto getMiRol(String codigoSala) {
        Usuario usuario = getUsuarioAutenticado();

        Sala sala = salaRepository.findByCodigoSala(codigoSala)
                .orElseThrow(() -> new IllegalArgumentException(SALA_NO_ENCONTRADA));

        SalaUsuario salaUsuario = salaUsuarioRepository
                .findBySala_IdSalaAndUsuario_IdUsuario(sala.getIdSala(), usuario.getIdUsuario())
                .orElseThrow(() -> new IllegalArgumentException(ErrorMessages.JUGADOR_NO_EN_SALA));

        if (salaUsuario.getRol() == null) {
            return new MiRolDto(null, null, null, null);
        }

        Rol rol = salaUsuario.getRol();
        return new MiRolDto(
                usuario.getIdUsuario(),
                rol.getNombre(),
                rol.getDescripcion(),
                rol.getBando().name());
    }

    @Transactional
    public void salirDeSala(String codigoSala) {
        Usuario usuario = getUsuarioAutenticado();

        Sala sala = salaRepository.findByCodigoSala(codigoSala)
                .orElseThrow(() -> new IllegalArgumentException(ErrorMessages.SALA_NO_ENCONTRADA));

        boolean esNarrador = sala.getNarrador().getIdUsuario().equals(usuario.getIdUsuario());
        boolean esCreador = sala.getCreador().getIdUsuario().equals(usuario.getIdUsuario());

        if (esCreador) {
            throw new IllegalStateException("El creador no puede abandonar la sala");
        }

        SalaUsuario salaUsuario = salaUsuarioRepository
                .findBySala_IdSalaAndUsuario_IdUsuario(sala.getIdSala(), usuario.getIdUsuario())
                .orElseThrow(() -> new IllegalArgumentException(ErrorMessages.JUGADOR_NO_EN_SALA));

        if (sala.getEstadoSala() == Sala.EstadoSala.INICIADA) {
            salaUsuario.setEstaVivo(false);
            salaUsuario.setMuerteConfirmada(true);
            salaUsuarioRepository.save(salaUsuario);
        } else {
            salaUsuarioRepository.delete(salaUsuario);
        }

        if (esNarrador) {
            sala.setNarrador(sala.getCreador());
            salaRepository.save(sala);
            List<JugadorDto> jugadoresActualizados = jugadorService.getJugadores(codigoSala);
            salaSocketService.notificarNarradorAsignado(codigoSala, jugadoresActualizados);
            return;
        }

        List<JugadorDto> jugadoresActualizados = jugadorService.getJugadores(codigoSala);
        salaSocketService.notificarJugadorSalio(codigoSala, jugadoresActualizados);
    }

    private void asignarHabilidades(SalaUsuario salaUsuario, Rol rol) {
        List<String> habilidades = switch (rol.getNombre()) {
            case GameConstants.ROL_BRUJA -> List.of(
                    GameConstants.HAB_POCION_VIDA,
                    GameConstants.HAB_POCION_MUERTE);
            case GameConstants.ROL_CAZADOR -> List.of(
                    GameConstants.HAB_DISPARO);
            case GameConstants.ROL_CUPIDO -> List.of(
                    GameConstants.HAB_FLECHAZO);
            case GameConstants.ROL_NINO_SALVAJE -> List.of(
                    GameConstants.HAB_MODELO);
            default -> List.of();
        };

        habilidades.forEach(nombre -> {
            HabilidadSala habilidad = HabilidadSala.builder()
                    .idSalaUsuario(salaUsuario)
                    .nombre(nombre)
                    .build();
            habilidadSalaRepository.save(habilidad);
        });
    }
}
